--- a/frontend/src/app/components/partials/navbars/navbar-userscore/navbar-userscore.component.html
+++ b/frontend/src/app/components/partials/navbars/navbar-userscore/navbar-userscore.component.html
@@ -4,24 +4,24 @@
   </h1>
   <div class="navbar-inner">
     <ul class="nav navbar-nav">
-      <li class="active">
+      <li class="nav-link pl-0 text-nowrap active">
         <a routerLink="/user-scores"
-          >Past Tests</a
+          ><i class="fa fa-bullseye fa-fw"></i>Past Tests</a
         >
       </li>
-      <li class="active">
+      <li class="nav-link pl-0 text-nowrap active">
         <a routerLink="/userscore-score-over-time"
-          >User Test Percentages Over Time</a
+          ><i class="fa fa-bullseye fa-fw"></i>User Test Percentages Over Time</a
         >
       </li>
-      <li class="active">
+      <li class="nav-link pl-0 text-nowrap active">
         <a routerLink="/user-case-study-correct-vs-oncorrect"
-          >User Test Percentages Across Case Studies</a
+          ><i class="fa fa-bullseye fa-fw"></i>User Test Percentages Across Case Studies</a
         >
       </li>
-      <li class="active">
+      <li class="nav-link pl-0 text-nowrap active">
         <a routerLink="/user-case-study-question-type-correct-vs-incorrect"
-          >User Test Percentages Across Case Studies & Question Type</a
+          ><i class="fa fa-bullseye fa-fw"></i>User Test Percentages Across Case Studies & Question Type</a
         >
       </li>
     </ul>
