--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -17,7 +17,7 @@
           <div class="menu">
             <a routerLink="/user-profile-page">Profile</a>
             <a routerLink="/user-scores">Scores</a>
-            <a routerLink="/admin" *ngIf="isAdmin">Admin</a>
+            <a routerLink="/admin-case-study-correct-vs-incorrect" *ngIf="isAdmin">Admin</a>
             <a (click)="logout()">Logout</a>
           </div>
         </li>
