--- a/frontend/src/app/components/partials/navbars/admin-navbar/admin-navbar.component.css
+++ b/frontend/src/app/components/partials/navbars/admin-navbar/admin-navbar.component.css
@@ -1,22 +1,120 @@
-.nav-link {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+/* Case Study Container */
+.container.case-study {
+  display: flex; /* Align navbar and case study details horizontally */
 }
 
-.sidebar {
-  padding: 2rem 1rem; 
+/* Case Study Navbar */
+.case-study-header {
+  padding: 1rem;
+  font-weight: bold;
+  color: #9c88ff; /* Lilac */
 }
 
-.sidebar .navbar {
-  width: 100%; 
+.navbar {
+  display: flex;
+  flex-direction: column; /* Vertically stack navbar items */
+  border-right: 1px solid #e9ecef; /* Light grey */
+  padding-right: 1rem;
+  margin-right: 1rem;
 }
 
-.sidebar .navbar-nav {
-  flex-direction: column; 
+.navbar a {
+  padding: 1rem;
+  display: block; /* Make navbar items block elements to occupy full width */
+  color: #9c88ff; /* Dark grey */
+  text-decoration: none; /* Remove underline */
 }
 
-.sidebar .nav-item .nav-link {
-  white-space: normal; 
-  text-align: left; 
+.navbar a:hover {
+  background: #e9ecef; /* Light grey */
+  color: #495057; /* Dark grey */
+  border-radius: 15px; /* Adjust this value to your liking */
 }
+
+/* DropDown Styles */
+.dropdown button {
+  background: none;
+  border: none;
+  color: #6c757d;
+  text-align: left;
+  padding-left: 1rem;
+  width: 100%;
+  text-decoration: none;
+}
+
+.dropdown button:hover {
+  background: #e9ecef;
+  color: #495057;
+  border-radius: 15px; /* Adjust this value to your liking */
+
+}
+
+.dropdown button:focus {
+  outline: none;
+}
+
+/* Case Study Details */
+.case-study-details {
+  flex: 1; /* Take up remaining horizontal space */
+}
+
+.case-study-details .header .name {
+  color: #9c88ff; /* Lilac */
+  font-weight: bold;
+}
+
+/* Responsive Styles */
+@media screen and (max-width: 768px) {
+  /* On smaller screens, navbar and details will stack vertically */
+  .container.case-study {
+    flex-direction: column;
+  }
+}
+
+/* Dropdown Menu */
+.dropdown {
+  position: relative;
+}
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  left: 100%;
+  top: 0;
+  min-width: 200px;
+  padding: 1rem;
+  background: #fff;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 99;/*makes sure that it sits above the direct opthamology test*/
+}
+
+.dropdown:hover .dropdown-menu {
+  display: block;
+}
+
+.dropdown-menu a {
+  padding: 0.5rem 1rem;
+  display: block;
+  text-decoration: none;
+  color: #6c757d;
+}
+
+.dropdown-menu a:hover {
+  background: #e9ecef;
+  color: #495057;
+}
+
+@media screen and (max-width: 600px) {
+  .navbar {
+    position: static;
+    width: 100%;
+    flex-direction: column; /* stack navbar items vertically */
+    align-items: center; /* center navbar items vertically */
+  }
+
+  .dropdown-menu {
+    left: 0;
+    top: 100%;
+  }
+}
+
