changes to admin graphs

--- a/frontend/src/app/components/pages/graphs/admin/admin-global-avg-score-over-time/admin-avg-score-over-time.component.html
+++ b/frontend/src/app/components/pages/graphs/admin/admin-global-avg-score-over-time/admin-avg-score-over-time.component.html
@@ -9,7 +9,7 @@
 
       <!-- Main Content -->
       <main role="main" >
-        <h1>Average Scores and User Count Over Time for Selected Case Study</h1>
+        <h1>Global Average Score Across All Case Studies</h1>
         <div class="chart-container">
           <canvas id="MyChart">{{ chart }}</canvas>
         </div>
