--- a/frontend/src/app/components/partials/navbars/admin-navbar/admin-navbar.component.html
+++ b/frontend/src/app/components/partials/navbars/admin-navbar/admin-navbar.component.html
@@ -16,7 +16,17 @@
       </li>
       <li class="nav-link pl-0 text-nowrap active">
         <a routerLink="/admin-registrations-over-time"
-          > <i class="fa fa-bar-chart fa-fw"></i>User Registrations Over Time</a
+          > <i class="fa fa-bar-chart fa-fw"></i>NEW - User Registrations Over Time</a
+        >
+      </li>
+      <li class="nav-link pl-0 text-nowrap active">
+        <a routerLink="/admin-avg-score-over-time"
+          > <i class="fa fa-bar-chart fa-fw"></i>NEW TEST - Global Average Score Across All Case Studies</a
+        >
+      </li>
+      <li class="nav-link pl-0 text-nowrap active">
+        <a routerLink="/admin-case-study-correct-vs-incorrect"
+          > <i class="fa fa-bar-chart fa-fw"></i>NEW TEST - Correct Vs Incorrect for specific Case Study</a
         >
       </li>
       <li class="nav-link pl-0 text-nowrap active">
