--- a/frontend/src/app/components/pages/case-study-detail/case-study-detail.component.css
+++ b/frontend/src/app/components/pages/case-study-detail/case-study-detail.component.css
@@ -25,11 +25,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 70%;
+  width: 100%;
 }
 
 .case-study-image {
-  width: 100%;
+  width: 60%;
+  height: 50%;
   border-radius: 10px;
   height: auto;
 }
