profile page, validation of name and address added

--- a/frontend/src/app/components/pages/home/home.component.html
+++ b/frontend/src/app/components/pages/home/home.component.html
@@ -6,9 +6,10 @@
     abilities with us!
   </p>
   <div class="col-lg-6 col-md-8 col-sm-10 mx-auto"> <!-- Add Bootstrap's grid classes here -->
+    <!--Hero image of queens unio-->
     <img
       class="img-fluid"
-      src="https://www.britishirishchamber.com/wp-content/uploads/2018/08/Queens-University-Belfast-logo-1.jpg"
+      [src]="homepageImageUrl"
       alt="QUB Virtual Eye Clinic"
     />
   </div>
