profile page, edited profile page avatar and button styling

--- a/frontend/src/app/components/pages/user-profile-page/user-profile-page.component.html
+++ b/frontend/src/app/components/pages/user-profile-page/user-profile-page.component.html
@@ -28,8 +28,8 @@
             class="mx-auto"
           ></default-button>
           <div *ngIf="isNameEditMode" class="d-flex justify-content-center">
-            <button class="btn btn-success" (click)="saveName()">Save</button>
-            <button class="btn btn-danger" (click)="cancelNameEdit()">Cancel</button>
+            <button class="btn btn-success mt-4 mx-3" (click)="saveName()">Save</button>
+            <button class="btn btn-danger mt-4" (click)="cancelNameEdit()">Cancel</button>
           </div>
         </div>
       </div>
@@ -65,8 +65,8 @@
             class="mx-auto"
           ></default-button>
           <div *ngIf="isAddressEditMode" class="d-flex justify-content-center">
-            <button class="btn btn-success mt-5 mr-3" (click)="saveAddress()">Save</button>
-            <button class="btn btn-danger mt-5" (click)="cancelAddressEdit()">Cancel</button>
+            <button class="btn btn-success mt-4 mx-3" (click)="saveAddress()">Save</button>
+            <button class="btn btn-danger mt-4" (click)="cancelAddressEdit()">Cancel</button>
           </div>
         </div>
       </div>
